Relax reflective access for Java 17 compatibility